--- a/404.html
+++ b/404.html
@@ -1,24 +1,24 @@
 <html>
   <head>
-    <title>MurderFace</title>
-    <meta name="title" content="MurderFace">
-    <meta name="description" content="MurderFace: The first-ever tshirt activated halloween costume">
+    <title>Cutie Polluties</title>
+    <meta name="title" content="Cutie Polluties">
+    <meta name="description" content="Cutie Polluties">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
-    <meta property="og:title" content="MurderFace">
-    <meta property="og:description" content="MurderFace: The first-ever tshirt activated halloween costume">
-    <meta property="og:image" content="https://activatemurderface.com/murderface-og.jpg">
+    <meta property="og:url" content="https://cutiepolluties.com/">
+    <meta property="og:title" content="Cutie Polluties">
+    <meta property="og:description" content="Cutie Polluties">
+    <meta property="og:image" content="https://cutiepolluties.com/og-image.jpg">
     <meta property="og:image:width" content="1500">
     <meta property="og:image:height" content="780">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
-    <meta property="twitter:title" content="MurderFace">
-    <meta property="twitter:description" content="MurderFace: The first-ever tshirt activated halloween costume">
-    <meta property="twitter:image" content="https://activatemurderface.com/murderface-og.jpg">
+    <meta property="twitter:url" content="https://cutiepolluties.com/">
+    <meta property="twitter:title" content="Cutie Polluties">
+    <meta property="twitter:description" content="Cutie Polluties">
+    <meta property="twitter:image" content="https://cutiepolluties.com/og-image.jpg">
     <script type="text/javascript">
-        window.location.href = "https://" + "instagram.com" + "/ar/1134418586971150/";
+        window.location.href = "https://" + "liquiddeath.com" + "/cutie-polluties";
     </script>
   </head>
   <body>
