update redirect site OG tags and image

--- a/404.html
+++ b/404.html
@@ -2,21 +2,21 @@
   <head>
     <title>Cutie Polluties</title>
     <meta name="title" content="Cutie Polluties">
-    <meta name="description" content="Cutie Polluties">
+    <meta name="description" content="Plastic pollution has never been cuter.">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://cutiepolluties.com/">
     <meta property="og:title" content="Cutie Polluties">
-    <meta property="og:description" content="Cutie Polluties">
-    <meta property="og:image" content="https://cutiepolluties.com/og-image.jpg">
-    <meta property="og:image:width" content="1500">
-    <meta property="og:image:height" content="780">
+    <meta property="og:description" content="Plastic pollution has never been cuter.">
+    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/Cutie_Pollutie_videothumb.jpg?v=1608679050">
+    <meta property="og:image:width" content="1000">
+    <meta property="og:image:height" content="771">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://cutiepolluties.com/">
     <meta property="twitter:title" content="Cutie Polluties">
-    <meta property="twitter:description" content="Cutie Polluties">
-    <meta property="twitter:image" content="https://cutiepolluties.com/og-image.jpg">
+    <meta property="twitter:description" content="Plastic pollution has never been cuter.">
+    <meta property="twitter:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/Cutie_Pollutie_videothumb.jpg?v=1608679050">
     <script type="text/javascript">
         window.location.href = "https://" + "liquiddeath.com" + "/cutie-polluties";
     </script>
