--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://cutiepolluties.com/">
     <meta property="og:title" content="Cutie Polluties">
     <meta property="og:description" content="Plastic pollution has never been cuter.">
-    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/Cutie_Pollutie_videothumb.jpg?v=1608679050">
+    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/cutie-social.png?v=1608739028">
     <meta property="og:image:width" content="1000">
     <meta property="og:image:height" content="771">
 
@@ -16,7 +16,7 @@
     <meta property="twitter:url" content="https://cutiepolluties.com/">
     <meta property="twitter:title" content="Cutie Polluties">
     <meta property="twitter:description" content="Plastic pollution has never been cuter.">
-    <meta property="twitter:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/Cutie_Pollutie_videothumb.jpg?v=1608679050">
+    <meta property="twitter:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/cutie-social.png?v=1608739028">
     <script type="text/javascript">
         window.location.href = "https://" + "liquiddeath.com" + "/cutie-polluties";
     </script>
