--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>Cutie Polluties</title>
-    <meta name="title" content="Cutie Polluties">
+    <title>Cutie Polluties by Liquid Death</title>
+    <meta name="title" content="Cutie Polluties by Liquid Death">
     <meta name="description" content="Plastic pollution has never been cuter.">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://cutiepolluties.com/">
-    <meta property="og:title" content="Cutie Polluties">
+    <meta property="og:title" content="Cutie Polluties by Liquid Death">
     <meta property="og:description" content="Plastic pollution has never been cuter.">
     <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/cutie-social.png?v=1608739028">
     <meta property="og:image:width" content="1000">
@@ -14,7 +14,7 @@
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://cutiepolluties.com/">
-    <meta property="twitter:title" content="Cutie Polluties">
+    <meta property="twitter:title" content="Cutie Polluties by Liquid Death">
     <meta property="twitter:description" content="Plastic pollution has never been cuter.">
     <meta property="twitter:image" content="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/cutie-social.png?v=1608739028">
     <script type="text/javascript">
