--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="title" content="Cutie Polluties by Liquid Death">
     <meta name="description" content="Plastic pollution has never been cuter.">
 
+
+    <link rel="shortcut icon" href="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/skull-favicon_32x32.png?v=1547269318" type="image/png">
+    <link rel="icon" href="https://cdn.shopify.com/s/files/1/0079/4289/7737/files/skull-favicon_32x32.png?v=1547269318" type="image/png">
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://cutiepolluties.com/">
     <meta property="og:title" content="Cutie Polluties by Liquid Death">
